# cpp_kmeans_clustering

./: .clang-format  CMakeLists.txt  README.md  main.cpp
src/: kmeans-clustering.cpp
